gitops/infrastructure/tekton-ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-ci
  labels:
    app.kubernetes.io/part-of: ecommerce-ci
    ecommerce.dev/isolation: supply-chain
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
